alpha Wolust Webseite

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,7 +60,7 @@
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title | xml_escape }}">
     {% if site.post_preview_image %}
-    <meta property="og:image" content="{{ site.url }}/images/me.jpeg">
+    <meta property="og:image" content="{{ site.url }}/images/tux-wolust.jpg">
     {% endif %}
 
     <!-- Twitter Card -->
@@ -76,7 +76,7 @@
     <meta name="twitter:image" content="{{ site.url }}/images/me.jpeg" />
     {% endif %}
 
-    <!-- Icons -->
+    <!-- Icons
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
@@ -86,6 +86,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+    -->
     <link rel="icon" type="image/png" href="/favicon-192x192.png" sizes="192x192">
     <link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160">
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
