wolust homepage alpha 0.2

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -73,7 +73,7 @@
     <meta name="twitter:description" content="{% if page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}" />
     <meta name="twitter:url" content="{{ site.url }}{{ page.url }}" />
     {% if site.post_preview_image %}
-    <meta name="twitter:image" content="{{ site.url }}/images/me.jpeg" />
+    <meta name="twitter:image" content="{{ site.url }}/images/tux-wolust.jpg" />
     {% endif %}
 
     <!-- Icons
