--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	{% endif %}
 
   <div class="site-wrap">
-    {% include header.html %}
+  <!-- <div class="site-wrap center"> -->
+   {% include header.html %}
 
     <div class="post p2 p-responsive wrap" role="main">
       <div class="measure">
