Datenschutz und gemacht von

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,20 @@
 <footer class="center">
   <div class="measure">
-    <small>
-      Theme crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).<br>
+  
+ <ul>
+    <li>
+   <small>
+      Gemacht mit &lt;3 von <a href="https://stefan-höhn.de">Stefan Höhn</a> mail: <a href="mailto:wolust@untergang.de">wolust@untergang.de</a>&lt;/&gt;<a href="/datenschutz">Datenschutz</a>
+   </small>
+   </li>
+   <li>
+   <small>
+      Theme crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).
       &lt;/&gt; available on <a href="https://github.com/johnotander/pixyll">GitHub</a>.
     </small>
+    </li>
+    </ul>
+
   </div>
 </footer>
 {% if site.enable_anchorjs %}<!-- AnchorJS -->
