Pfade und Permalinks der Webseiten angepasst. Layouts geprüft zugeornet

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,6 +57,10 @@
       <meta name="msvalidate.01" content="{{ site.bing_verification }}" />
     {% endif %}
 
+    
+    <!-- SEO -->
+    
+    
     <!-- Open Graph -->
     <!-- From: https://github.com/mmistakes/hpstr-jekyll-theme/blob/master/_includes/head.html -->
     <meta property="og:locale" content="{{ site.text.og_locale }}">
