Eigenes Cookiebanner in Javascript

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,8 @@
 
   </div>
 </footer>
-{% if site.enable_anchorjs %}<!-- AnchorJS -->
+
+<!-- AnchorJS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/3.0.0/anchor.min.js"></script>
 <script>
     anchors.options = {
@@ -26,4 +27,4 @@
     icon: '⚓️'
     };
     anchors.add('.post-content');
-</script>{% endif %}
+</script>
