--- a/_includes/head.html
+++ b/_includes/head.html
@@ -115,4 +115,38 @@
        ga('send', 'pageview');
     </script>
     {% endif %}
+    
+    
+    
+       <script type="text/javascript">
+
+klicker = 'klickernix';
+document.cookie = ""; 
+
+function change()
+{
+document.getElementById("d").style.visibility="hidden";
+}
+
+
+function getCookie(cname) {
+    var name = cname + "=";
+    var decodedCookie = decodeURIComponent(document.cookie);
+    var ca = decodedCookie.split(';');
+    for(var i = 0; i <ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) == ' ') {
+            c = c.substring(1);
+        }
+        if (c.indexOf(name) == 0) {
+            return c.substring(name.length, c.length);
+        }
+    }
+    return "";
+}
+
+
+
+</script>
+    
 </head>
