--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <div class="measure">
     
     <div id="d" class ="small" style="background-color:lightgrey;"><span style="margin-left: 10px;"> Diese Seite benutzt Cookies Info: <a href="/datenschutz">🍪</a></span>
-<span style="float:right; margin-right: 10px;"> <a href="#" onclick="change(); document.cookie = 'klicker = Gedruckt';">ok</a></span>
+<span style="float:right; margin-right: 10px;"> <a href="#" onclick="document.cookie = 'klicker = Gedruckt'; change();">ok</a></span>
 <script>
 
 var x = getCookie('klicker'); 
