Link Timescafe;Cookie Banner Path angepasst

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -118,10 +118,10 @@
     
     
     
-       <script type="text/javascript">
+<script type="text/javascript">
 
-klicker = 'klickernix';
-document.cookie = ""; 
+
+document.cookie = "klicker";
 
 function change()
 {
@@ -145,8 +145,11 @@ function getCookie(cname) {
     return "";
 }
 
+var x = getCookie('klicker'); 
+
 
 
 </script>
+
     
 </head>
