--- a/_includes/head.html
+++ b/_includes/head.html
@@ -120,7 +120,8 @@
 document.cookie = "klicker";
 function change()
 {
-document.getElementById("d").style.visibility="hidden";
+//document.getElementById("d").style.visibility="hidden";
+document.getElementById("d").style.display = "none";
 }
 function getCookie(cname) {
     var name = cname + "=";
