--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,13 +7,7 @@
       Gemacht mit &lt;3 von <a href="https://stefan-höhn.de">Stefan Höhn</a> mail: <a href="mailto:wolust@untergang.de">wolust@untergang.de</a>&lt;/&gt;<a href="/datenschutz">Datenschutz</a>
    </small>
    </li>
-   <li>
-   <small>
-      Theme crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).
-      &lt;/&gt; available on <a href="https://github.com/johnotander/pixyll">GitHub</a>.
-    </small>
-    </li>
-    </ul>
+ </ul>
 
   </div>
 </footer>
@@ -24,6 +18,7 @@
     anchors.options = {
     visible: 'always',
     placement: 'left',
+    left: '0',
     icon: '⚓️'
     };
     anchors.add('.post-content');
