--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,13 +12,7 @@
     <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    
     <meta name="description" content="{% if page.description %}{{ page.description | xml_escape | prepend: ' ' | prepend: page.summary | xml_escape }}{% else %}{{ site.description | xml_escape }}{% endif %}">
-    
-    
-    
-    
     {% if page.meta_robots %}<meta name="robots" content="{{ page.meta_robots }}">
     {% else %}<meta name="robots" content="all">{% endif %}
     <meta name="author" content="{{ site.author }}">
@@ -26,10 +20,8 @@
     {% if page.categories %}<meta name="keywords" content="{{ page.categories | join: ', ' }}">{% endif %}
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl }}" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/pixyll.css" | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
-
     <!-- Fonts -->
     {% if site.extended_fonts %}
     <link href='//fonts.googleapis.com/css?family=Merriweather:900,900italic,300,300italic&amp;subset=latin-ext,latin' rel='stylesheet' type='text/css'>
@@ -41,14 +33,12 @@
     {% if site.show_social_icons or site.show_sharing_icons %}
       <link href="//maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     {% endif %}
-
     <!-- MathJax -->
     {% if site.enable_mathjax %}
     <script type="text/javascript" async
         src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
     {% endif %}
-
     <!-- Verifications -->
     {% if site.google_verification %}
       <meta name="google-site-verification" content="{{ site.google_verification }}" />
@@ -56,11 +46,7 @@
     {% if site.bing_verification %}
       <meta name="msvalidate.01" content="{{ site.bing_verification }}" />
     {% endif %}
-
-    
     <!-- SEO -->
-    
-    
     <!-- Open Graph -->
     <!-- From: https://github.com/mmistakes/hpstr-jekyll-theme/blob/master/_includes/head.html -->
     <meta property="og:locale" content="{{ site.text.og_locale }}">
@@ -72,7 +58,6 @@
     {% if site.post_preview_image %}
     <meta property="og:image" content="{{ site.url }}/images/tux-wolust.jpg">
     {% endif %}
-
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
     {% if site.twitter_username %}
@@ -85,7 +70,6 @@
     {% if site.post_preview_image %}
     <meta name="twitter:image" content="{{ site.url }}/images/tux-wolust.jpg" />
     {% endif %}
-
     <!-- Icons
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
@@ -96,7 +80,6 @@
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-    
     <link rel="icon" type="image/png" href="/favicon-192x192.png" sizes="192x192">
     <link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160">
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
@@ -104,7 +87,6 @@
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
          -->
     <link href="/favicon.ico" rel="icon" type="image/x-icon" />
-     
      {% if site.google_analytics %}
     <script type="text/javascript">
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -153,7 +135,24 @@
    {% endfor %}
   {% endif %} 
   
-   <script type="text/javascript">
+<!-- JSON-LD-Markup generiert von Google Strukturierte Daten: Markup-Hilfe -->  
+  {% if page.title contains "Die Treffen 2018" %}
+    <script type="application/ld+json">
+    { "@context" : "http://schema.org", "@type" : "Article", "name" : "Die Treffen 2018", "author" : { "@type" : "Person", "name" : "Stefan Höhn" }, "datePublished" : "2018-09-25", "image" : "https://wolust.de/images/tux-wolust.jpg", "articleSection" : "{{ review.inhalt }}", "url" : "https://wolust.de/treffen/2018/09/05/lastmeeting/", "publisher" : { "@type" : "Organization", "name" : "wolust" } }
+    </script>
+  {% endif %}
+  {% if page.title contains "Rückblick 2017" %}
+      <script type="application/ld+json">
+      { "@context" : "http://schema.org", "@type" : "Article", "name" : "Rückblick 2017", "author" : { "@type" : "Person", "name" : "Stefan Höhn" }, "datePublished" : "2017-12-11", "image" : "https://wolust.de/images/tux-wolust.jpg", "articleSection" : "{{ review.inhalt }}", "url" : "https://wolust.de/treffen/2017/12/11/lastmeeting/", "publisher" : { "@type" : "Organization", "name" : "wolust" } }
+    </script>
+  {% endif %}
+   {% if page.title contains "Rückblick 2016" %}
+    <script type="application/ld+json">
+    { "@context" : "http://schema.org", "@type" : "Article", "name" : "Rückblick 2016", "author" : { "@type" : "Person", "name" : "Stefan Höhn" }, "datePublished" : "2016-12-11", "image" : "https://wolust.de/images/tux-wolust.jpg", "articleSection" : "{{ review.inhalt }}", "url" : "https://wolust.de/treffen/2016/12/11/lastmeeting/", "publisher" : { "@type" : "Organization", "name" : "wolust" } }
+    </script>
+   {% endif %}
+    
+<script type="text/javascript">
 document.cookie = "klicker";
 function change()
 {
