--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,13 @@
 layout: default
 ---
 
-{% assign minutes = content | strip_html | number_of_words | divided_by: 180 %}
+{% assign minutes = content | strip_html | number_of_words | divided_by: 100 %}
 {% if minutes == 0 %}
 {% assign minutes = 1 %}
 {% endif %}
 
 <div class="post-header mb2">
   <h1>{{ page.title }}</h1>
-  
   <span class="post-meta small">
   {% if page.minutes %}
     {{ page.minutes }} {{ site.text.post.minute_read }}
@@ -50,11 +49,9 @@ layout: default
   </script>
   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
-
 {% if site.facebook_comments %}
   <div class="fb-comments" data-href="{{ site.url }}{{ page.url }}" data-width="100%" data-numposts="{{ site.facebook_comments_number }}"></div>
 {% endif %}
-
 {% if site.show_related_posts %}
   <h3 class="related-post-title">{{ site.text.post.related_posts }}</h3>
   {% for post in site.related_posts %}
@@ -67,7 +64,7 @@ layout: default
   {% endfor %}
 {% endif %}
 
-
+{% include fortune.html %}
 
 <span class="post-meta"> Erstellt: {{ page.date | date: site.date_format }} </span> / 
   {% if page.update_date %}
