www.wolust.de -> wolust.de

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -120,7 +120,7 @@
 "description": "Wormser Linux User treffen sich einmal im Monat. Wenn du Interesse an Linux hast, komm vorbei und setz dich dazu !", 
 "endDate": "{{treffen.jahr}}-{{treffen.monat}}-{{ treffen.tag }}T23:00", 
 "offers": { "@type": "Offer", 
-            "url": "https://www.wolust.de", 
+            "url": "https://wolust.de", 
             "price": "0", 
             "priceCurrency": "€", 
             "availability": "http://schema.org/InStock", 
