Icons und Applezeugs eingebaut.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,18 @@ change();
       {% if site.show_social_icons %}
         {% include social_links.html %}
       {% endif %}
+      
+      <!-- Place this tag where you want the button to render. -->
+<a class="github-button"
+   href="{{ https://github.com/:Wolust/:wolust}}"
+   title="{{ title }}"
+   data-icon="{{ octicon-mark-github }}"
+   data-size="{{ small }}"
+   data-show-count="{{ true }}"
+   data-text="{{ text }}"
+   aria-label="{{ aria label }}"
+   >{{ text }}</a>
+      
     </div>
   </div>
  </header>
