--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,7 +70,7 @@
     {% if site.post_preview_image %}
     <meta name="twitter:image" content="{{ site.url }}/images/tux-wolust.jpg" />
     {% endif %}
-    <!-- Icons
+    <!-- Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
@@ -85,7 +85,7 @@
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-         -->
+         
     <link href="/favicon.ico" rel="icon" type="image/x-icon" />
      {% if site.google_analytics %}
     <script type="text/javascript">
@@ -176,5 +176,6 @@ function getCookie(cname) {
 }
 var x = getCookie('klicker'); 
 </script>
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 
