--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -18,6 +18,6 @@
       <span class="pagination-item disabled">{{ site.text.pagination.older }}</span>
     {% endif %}
   </div>
-  <div class="pagination-meta">Page {{ paginator.page }} of {{ paginator.total_pages }}</div>
+  <div class="pagination-meta">Seite {{ paginator.page }} von {{ paginator.total_pages }}</div>
 </div>
 {% endif %}
