--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,12 +6,30 @@ body {
 	line-height: 1.6em;
 }
 
-h1 {
-	font-size: 2em;
+.site-header .site-nav {
+	position: abolsute;
 }
 
-h2{
-	font-size: 1.5em;
+h1.site-title {
+	font-size: 2em;
+	border: 1px solid #000;
+	width: 100%;
+	text-align: center;
+}
+
+h1.site-title a {
+	font-size: 1.7em;
+	font-weight: bold;
+	line-height: 2em;
+	padding: 10px;
+}
+
+h2 {
+	font-size: 1.7em;
+}
+
+h2 {
+	font-size: 1.3em;
 }
 
 .well {
