--- a/_includes/share_buttons.html
+++ b/_includes/share_buttons.html
@@ -7,7 +7,7 @@
   {{ site.text.share_buttons.text }}
   
     {% if site.share_facebook %}
-      <a class="fa fa-facebook" href="https://facebook.com/sharer.php?u={{ site.url | cgi_escape }}{{ page.url | cgi_escape }}" rel="nofollow" target="_blank" title="{{ site.text.share_buttons.facebook }}"></a>
+      <a class="fa fa-facebook" href="https://facebook.com/sharer.php?u={{ page.url | cgi_escape }}" rel="nofollow" target="_blank" title="{{ site.text.share_buttons.facebook }}"></a>
     {% endif %}
 
     {% if site.share_twitter %}
