--- a/_includes/fortune.html
+++ b/_includes/fortune.html
@@ -11,7 +11,14 @@ var myArray = [
   "Linux ist nur gratis, wenn deine Zeit wertlos ist.",
   "Früher oder später emulieren wir euch!",
   "Linux, das beste Mittel um den Status DAU zu verlassen.",
-  "I❤️ #!/bin/bash"
+  "I❤️ #!/bin/bash",
+  "Ah, ich habe jetzt andere Fehlermeldungen, wir machen Fortschritte.",
+  "Der Computer ist eine logische Weiterentwicklung des Menschen: Intelligenz ohne Moral!",
+  "Wer JavaScript aktiviert hat, hat&#x27;s leichter mit dem Klicken.",
+  "In the long run, every program becomes rococco, and then rubble.",
+  "You are false data.",
+  "Due to lack of disk space, this fortune database has been discontinued.",
+  "The first version always gets thrown away."
 ];
 var randomitem = myArray[Math.floor(Math.random()*myArray.length)];
 document.write( randomitem );
