--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,8 +12,11 @@ change();
 </div>
       <nav class="site-nav">
         {% include navigation.html %}
-      </nav>
-      <h1 class="site-title"><a href="{{ site.url }}">{{ site.title }}</a></h1>
+      </nav>      
+      <img id="logo" src="{{ site.url }}/images/logo.png" alt="Wolust Logo" />
+      <h1 class="site-title">          
+        <a href="{{ site.url }}">{{ site.title }}</a>
+      </h1>
       <div class="clearfix"></div>
       {% if site.show_social_icons %}
         {% include social_links.html %}
