--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,14 +15,15 @@ h1.site-title {
 	border: 1px solid #000;
 	width: 100%;
 	text-align: center;
-	margin-top: 0;
+	float: left;
 }
 
 h1.site-title a {
-	font-size: 1.7em;
+	font-size: 1.4em;
 	font-weight: bold;
-	line-height: 2em;
-	padding: 10px;
+	top: 38px;
+	position: relative;
+	color: #666;
 }
 
 h2 {
@@ -57,4 +58,5 @@ h2 {
 
 #logo {
 	padding: 20px;
+	float: left;
 }
