Im Header Logo + Text wird zum Link.  Vorher war der Link nur Text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,8 @@ change();
         {% include navigation.html %}
       </nav>            
       <h1 class="site-title">
-          <img id="logo" src="{{ site.url }}/images/logo.png" alt="Wolust Logo" />
-          <a href="{{ site.url }}">{{ site.title }}</a>
+          <a href="{{ site.url }}"><img id="logo" src="{{ site.url }}/images/logo.png" alt="Wolust Logo"/>
+          {{ site.title }}</a>
       </h1>
       <div class="clearfix"></div>
       {% if site.show_social_icons %}
