--- a/_includes/head.html
+++ b/_includes/head.html
@@ -152,7 +152,7 @@
    
   {% endif %} 
  
- {% if page.title == "index" %}
+ {% if page.title contains "index" %}
  <!-- JSON-LD-Markup generiert von Google Strukturierte Daten: Markup-Hilfe -->  
 <script type="application/ld+json"> { "@context" : "http://schema.org", "@type" : "Article", "name" : "Wormser Linux User Stammtisch", "author" : { "@type" : "Person", "name" : "{{ site.author }}" }, "datePublished" : "2019-03-25", "dateModified" : "{{ site.time }}", "image" : "{{ site.url }}/images/tux-wolust.jpg", "headline": "{{ site.description }}", "articleSection" : "WOLUST ist ein Acronym für Wormser Linux User Stammtisch. Die Themen sind meist frei wählbar. Es geht um aktuelle Erfahrungen, beruflich, schulisch oder aus Hobby. Wie alles begann: tl;dr Wenn Dich Linux interessiert, komm vorbei, setz Dich dazu !", "url" : "{{ site.url }}{{ page.url }}", "publisher" : { "@type" : "Organization", "name" : "untergang.de", "logo" : {"@type" : "ImageObject", "url" : "https://untergang.de/images/logo.png", "width" : "600", "height" : "60"} } } </script>
  {% endif %} 
