--- a/_includes/head.html
+++ b/_includes/head.html
@@ -164,7 +164,7 @@
 - Kleincomputer
 - Desktop.
 Die Vorträge werden anschaulich vorgetragen und mittels Beamer unterstützt.
-Je nach Vortrag gibt es anschließend ein "Hands on" oder Live-Vorführungen am Beispiel.
+Je nach Vortrag gibt es anschließend ein Hands on oder Live-Vorführungen am Beispiel.
 Der Vorträge sind kostenfrei, um Anmeldung wird gebeten. ",
 	  "provider": {
 		"@type": "Organization","
