--- a/_includes/head.html
+++ b/_includes/head.html
@@ -167,8 +167,7 @@ Die Vorträge werden anschaulich vorgetragen und mittels Beamer unterstützt.
 Je nach Vortrag gibt es anschließend ein Hands on oder Live-Vorführungen am Beispiel.
 Der Vorträge sind kostenfrei, um Anmeldung wird gebeten. ",
 	  "provider": {
-		"@type": "Organization","
-	  }
+		"@type": "Organization",
 		"name": "Volkshochschule Worms",
 		"sameAs": "https://www.vhs-worms.de/"
 	}
